Notice errors style fix on mobile

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,6 +44,13 @@ section {
 ul {
     list-style: none;
 }
+.flash-msg{
+    z-index: 2000;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 .filter-h {
     font-weight: 600;
